correct donation and avaoide delete and update for campaign
